docs: update swagger document
